# STUDY-BUDDY_AI

./: .gitignore  Dockerfile  Jenkinsfile  main.py  pyproject.toml
manifests/: deployment.yaml
src/generator/: question_generator.py
src/prompts/: templates.py
study_buddy_ai_main.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
