[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"



[project]
name = "study-buddy-ai-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["langchain",
"langchain_classic",
"langchain-groq",
"pandas",
"streamlit",
"python-dotenv"]

[tool.setuptools.packages.find]
where = ["."]
